--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = OCA/commission
 	url = git@github.com:OCA/commission.git
 	branch = 14.0
+
+[submodule "OCA/partner-contact"]
+	path = OCA/partner-contact
+	url = git@github.com:OCA/partner-contact.git
+	branch = 14.0
