--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,8 @@
 	path = OCA/brand
 	url = git@github.com:OCA/brand.git
 	branch = 14.0
+
+[submodule "OCA/rma"]
+	path = OCA/rma
+	url = git@github.com:OCA/rma.git
+	branch = 14.0
