--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,8 @@
 	path = OCA/brand
 	url = git@github.com:OCA/brand.git
 	branch = 15.0
+
+[submodule "ingadhoc/product"]
+	path = ingadhoc/product
+	url = git@github.com:ingadhoc/product.git
+	branch = 15.0
