[ADD] submodule OCA/account-financial-reporting

--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,8 @@
 [submodule "GST/apps_odoo"]
 	path = GST/apps_odoo
 	url = git@gitlab.freyi.es:odoo/apps_odoo
+
+[submodule "OCA/account-financial-reporting"]
+	path = OCA/account-financial-reporting
+	url = git@github.com:OCA/account-financial-reporting.git
+	branch = 15.0
