--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,7 @@
 	path = OCA/account-financial-reporting
 	url = git@github.com:OCA/account-financial-reporting.git
 	branch = 15.0
+[submodule "GST/apps_odoo"]
+	path = GST/apps_odoo
+	url = git@gitlab.freyi.es:odoo/apps_odoo
+	branch = 15.0
